# path_linalg

./: .gitignore  Cargo.toml  README.md
benches/: bench_dot_product.rs
cuda/: CMakeLists.txt  README.md
cuda/include/: host_minplus.hh  kernels.cuh  matrix.cuh  naive_minplus.cuh  naive_minplus_branch.cuh  naive_minplus_contiguous.cuh  naive_minplus_inner_loop.cuh  naive_minplus_shared.cuh  runner.hh  types.hh
cuda/src/: CMakeLists.txt  host_minplus.cc  naive_minplus.cu  naive_minplus_branch.cu  naive_minplus_contiguous.cu  naive_minplus_indexing_shared.cu  naive_minplus_shared.cu  runner.cc
cuda/test/: CMakeLists.txt  test.cc  test.cu
src/: dual.rs  lib.rs  matrix.rs  single.rs
src/dual/: dual_accumulators.rs  dual_row_col_dot.rs
src/single/: accumulators.rs  row_col_dot.rs
