[package]
name = "path_linalg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
anyhow = "1.0"
structopt = "0.3.4"
fastrand = "1.7.0"


[[bench]]
name = "bench_dot_product"
harness = false